# fastapi-todo

./: README.md  pyproject.toml
app/: create_tables.py  database.py  env_example  main.py
app/models/: todo.py
app/routers/: llm_router.py  movie_search_router.py  todo_router.py
app/services/: config.py  embedding_service.py  llm_service.py  movie_search_service.py  open_search_service.py  rag_service.py  todo_service.py
