[tool.hatch.build.targets.wheel]
packages = ["app"]
[project]
name = "fastapi-todo"
version = "0.1.0"
description = "A simple TODO app using FastAPI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "groq>=0.1.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"